Week 7: AWS LocalStack with Next.js Tutorial

--- a/expense-tracker-next/.gitignore
+++ b/expense-tracker-next/.gitignore
@@ -10,6 +10,9 @@
 !.yarn/releases
 !.yarn/versions
 
+# Localstack
+localstack-data/
+
 # testing
 /coverage
 
@@ -39,3 +42,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
